Fix content overflow on mobile

--- a/src/components/ProjectEntry.module.css
+++ b/src/components/ProjectEntry.module.css
@@ -1,6 +1,7 @@
 .article {
   display: flex;
   flex-direction: column;
+  width: 100%;
   padding: 0.5em;
 
   /*margin-bottom: 2em;*/
