--- a/src/components/Technologies.module.css
+++ b/src/components/Technologies.module.css
@@ -1,5 +1,6 @@
 .container {
     display: flex;
+    flex-wrap: wrap;
     gap: 0.5em;
     margin: 0.5em 0;
     font-size: 0.8em;
